fixing collapse menu

--- a/style.css
+++ b/style.css
@@ -207,6 +207,8 @@ a {
   font-size: 15px;
   max-height: 0px;
   width: 100.5%;
+  margin-left: -1px;
+  margin-bottom: -1px;
   background-color: #6a1b4d;
   overflow: hidden;
   outline: none;
